client/jetpack-cloud/sections/partner-portal/layout/style.scss
.main.partner-portal-layout {
	padding-inline: 0;
}

.partner-portal-layout__container {
	max-width: 100%;
	min-height: calc(100vh - 123px);
	display: flex;
	flex-direction: column;
	margin: auto;
	padding: 0;
}

.partner-portal-layout__body {
	padding: 16px 0;
	margin-block-end: -32px;
	flex: 1 1 100%;
}

.partner-portal-layout__top,
.partner-portal-layout__body {
	width: 100%;

	&-wrapper {
		margin-inline: 16px;
	}

	&-wrapper > * {
		max-width: 1500px;
		margin-inline: auto !important;
	}

	@include breakpoint-deprecated( ">660px" ) {
		// We need these negative margin values because we want to make the container full-width,
		// but our element is inside a limited-width parent.
		margin-inline: -73px;
		padding-inline: 73px;
	}
}

.partner-portal-layout__header {
	display: flex;
	align-items: center;

	> * + * {
		margin-left: 24px;
	}

	@include breakpoint-deprecated( "<960px" ) {
		flex-wrap: wrap;

		> * {
			width: 100%;
			margin-bottom: 16px;
		}

		> * + * {
			margin-left: 0;
		}
	}

	.card-heading {
		margin-block-start: initial;
	}

	a.button {
		margin-left: auto;
	}
}

.main.partner-portal-layout.is-with-border {
	@include breakpoint-deprecated( ">660px" ) {
		.partner-portal-layout__top {
			border-bottom: 1px solid var(--color-primary-5);
		}

		.partner-portal-layout__body {
			background: rgba(255, 255, 255, 0.5);
		}
	}
}

